5-2110-fragments - STG - v.2.rc - fix regions, hide invisible btn, made footer, slight visual fixes

--- a/src/App/components/Header/styles.css
+++ b/src/App/components/Header/styles.css
@@ -23,6 +23,7 @@
 
   --c-button-bright-color: #2A303C;
   --c-button-bright-bg: #FCFCFD;
+  min-height: 50px;
 }
 
 .frag-header_dark {
@@ -52,6 +53,7 @@
 @media screen and (max-width: 1200px) {
   .frag-header {
     padding: 6px 10px;
+    min-height: 38px;
   }
 }
 
