--- a/src/App/snippet-foot.css
+++ b/src/App/snippet-foot.css
@@ -48,7 +48,7 @@
   text-align: center;
   max-width: 640px;
   margin-bottom: 40px;
-  padding: 8px;
+  padding: 16px;
 }
 
 .lm-app-fragments-snippet-foot__cta {
