--- a/src/App/snippet-head.css
+++ b/src/App/snippet-head.css
@@ -116,7 +116,8 @@
 .lm-app-fragments-snippet-head__supertitle {
   font-family: var(--ff-marr-sans-condensed);
   font-size: 20px;
-  line-height: 48px;
+  line-height: 1.5;
+  padding-bottom: 16px;
   letter-spacing: .1em;
   text-transform: uppercase;
   width: 854px;
