--- a/src/App/snippet-paragraph.css
+++ b/src/App/snippet-paragraph.css
@@ -5,6 +5,7 @@
   font-size: 16px;
   line-height: 24px;
   font-family: var(--ff-marr-sans);
+  border: 1px solid #3B3B3B;
 }
 
 .lm-app-fragments-snippet-paragraph .snippet-paragraph-title {
